--- a/clara-gemma/index.html
+++ b/clara-gemma/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../../assets/testlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clara && Gemma</title>
+    <title>Clara & Gemma</title>
   </head>
   <body>
     <div id="root"></div>
